--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Women novelists, French -- 19th century -- Biography'
 - !lcc 'PQ'
 - !lcsh 'Sand, George, 1804-1876'
+- GITenberg
 title: Histoire de ma Vie, Livre 3 (Vol. 10 - 13)
 url: http://www.gutenberg.org/ebooks/42765
